--- a/pom.xml
+++ b/pom.xml
@@ -16,25 +16,38 @@
     <name>boot-manage</name>
     <description>boot-manage</description>
 
-    <url/>
+    <url>https://gitee.com/smog_huang/boot-manage</url>
+
     <licenses>
         <license/>
     </licenses>
+
+    <!--项目开发人员-->
     <developers>
-        <developer/>
+        <developer>
+            <name>zuuuYao</name>
+            <email>17685306043@163.com</email>
+            <organization>github.zuuuYao</organization>
+            <roles>
+                <role>develop</role>
+            </roles>
+        </developer>
     </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
 
     <properties>
         <java.version>17</java.version>
+        <knife4j.version>4.5.0</knife4j.version>
     </properties>
 
     <dependencies>
+
+        <!--knife4j Swagger接口文档-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>${knife4j.version}</version>
+        </dependency>
 
         <!--端点监控-->
         <dependency>
@@ -59,6 +72,13 @@
                     <artifactId>spring-boot-starter-tomcat</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+<!--            <scope>provided</scope>-->
         </dependency>
 
         <!--使用undertow作为web服务器-->
@@ -89,6 +109,8 @@
     </dependencies>
 
     <build>
+        <!--打包文件名-->
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
