--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active: dev
   mvc:
     # 静态资源目录
-    static-path-pattern: /static/**
+#    static-path-pattern: /static/**
   servlet:
     multipart:
       # 限制最大上传文件大小
