feat(全局异常处理): 实现全局异常处理
实现全局异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>${modelmapper.version}</version>
         </dependency>
 
+        <!--jackson 引入此模块支持对Java8的LocalDateTime -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
 
         <!--mybatis-plus-->
         <dependency>
@@ -99,9 +104,8 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
 
