--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,18 @@
         <modelmapper.version>3.2.0</modelmapper.version>
         <hutool.version>5.8.16</hutool.version>
         <sa-token.version>1.38.0</sa-token.version>
+        <ua-parser.version>1.6.1</ua-parser.version>
     </properties>
 
     <dependencies>
+
+
+        <!--解析 User-Agent-->
+        <dependency>
+            <groupId>com.github.ua-parser</groupId>
+            <artifactId>uap-java</artifactId>
+            <version>${ua-parser.version}</version>
+        </dependency>
 
         <!-- Sa-Token 权限认证，一款国产开源安全框架。比起SpringSecurity轻量API更简单减少学习成本。在线文档：https://sa-token.cc -->
         <dependency>
@@ -57,9 +66,8 @@
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-jwt</artifactId>
-            <version>1.38.0</version>
+            <version>${sa-token.version}</version>
         </dependency>
-
 
         <!-- hutool 非常优秀的工具类,本人用了很多年。工具类非常丰富极大减少重复造轮子。在线文档：https://hutool.cn/ -->
         <dependency>
