--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,16 @@
             <version>${mybatis-plus.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
         <!-- 代码生成器-->
         <dependency>
             <groupId>org.apache.velocity</groupId>
