refactor(pom.xml): 使用`${project.artifactId}-${project.version}`替换`${artifactId}-${version}`以确保最终名称的正确性
在Maven的pom.xml文件中，将最终名称的属性从使用`${artifactId}-${version}`更改为使用`${project.artifactId}-${project.version}`。这个更改是为了确保在构建过程中可以正确地引用项目的artifactId和version属性，从而避免在打包时可能出现的命名错误。这是一个很好的实践，特别是在大型项目中，确保每个构建的唯一性和正确性是非常重要的。

--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,7 @@
 
     <build>
         <!--打包文件名-->
-        <finalName>${artifactId}-${version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
