--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
                     <mainClass>org.github.zuuuyao.BootManageApplication</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
