--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://47.109.65.23:3306/boot_manage?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:33306/boot_manage?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: 43534e
+    password: "!@#BootAdmin2024"
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
   data:
     redis:
-      host: 127.0.0.1
-      port: 6379
+      host: localhost
+      port: 6999
       password: DTT_YFB_2019
       database: 11
       connect-timeout: 10s
